NLP TP's/texts/robotics/robotics.stackexchange_0000031213.txt
Q:

Cannot run roscore, rosmake with python 3

Hi all,
I got SyntaxError when run roscore, rosmake, rosversion ...
tienthanh@tienthanh-pc:~$ roscore
Traceback (most recent call last):
 File "/opt/ros/diamondback/ros/bin/roscore", line 34, in <module>
    from ros import roslaunch
  File "/opt/ros/diamondback/ros/core/roslib/src/ros/__init__.py", line 55
    except roslib.packages.InvalidROSPkgException, e:
                                                 ^
SyntaxError: invalid syntax

tienthanh@tienthanh-pc:~$ roscd rgbdslam && rosmake --rosdep-install rgbdslam
  File "/opt/ros/diamondback/ros/bin/rosmake", line 46
    print "Rospack failed to build" 
                                  ^
tienthanh@tienthanh-pc:/opt/ros/diamondback/stacks/rgbdslam$ rosversion
  File "/opt/ros/diamondback/ros/bin/rosversion", line 55
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Originally posted by Tien Thanh on ROS Answers with karma: 231 on 2011-04-20
Post score: 0

Original comments
Comment by Tien Thanh on 2011-04-21:
python --version
Python 3.1.2
Comment by Ugo on 2011-04-20:
Which version of python are you running?

A:

For python 3 support, you should have a look at this ticket:
https://code.ros.org/trac/ros/ticket/3166
But I think you're going to have some trouble getting ROS to work on python 3. Can't you use python2 instead? Or are you running Arch Linux?
Cheers,
Ugo

Originally posted by Ugo with karma: 1620 on 2011-04-21
This answer was ACCEPTED on the original site
Post score: 1

Original comments
Comment by Tien Thanh on 2011-04-21:
I change the link in python in robotpkg to /usr/bin/python2.6 and it works. But I'm not sure package in robotpkg still work probaly. Thank you anyways.
Comment by Ugo on 2011-04-21:
Then you should probably have a look at your PATH and see where python 3 is installed (may be /usr/local/bin?). If you do export PATH=/usr/bin and check python --version it should give you python 2.6.
Comment by Tien Thanh on 2011-04-21:
Yes the ln -s /usr/bin/python is linked to /usr/bin/python2.6. I installed python3 through robotpkg http://softs.laas.fr/openrobots/robotpkg/README.html#tth_sEc2.1.3.
Comment by Ugo on 2011-04-21:
and ls -l /usr/bin/python is linked to /usr/bin/python2.6? How did you install python3? Through apt-get?
Comment by Tien Thanh on 2011-04-21:
Python 3.1.2
Comment by Ugo on 2011-04-21:
You ran update-alternatives and selected python 2.6? What does python --version return?
Comment by Tien Thanh on 2011-04-21:
I use Ubuntu 10.04, I tried to change the python default version to 2.6 with sudo ln -s /usr/bin/python-config2.6 /usr/bin/python-config and sudo ln -s /usr/bin/python2.6 /usr/bin/python. But it's not work. I also tried with update-alternatives, but that no help. How to change back to python2.6?

